changed mvn settings remove JDK warnings, and configure for JAVA 17. Added mvn javafx:run plugin